# dduper

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG  Cargo.toml  DESIGN.md  Dockerfile  INSTALL.md  README.md  dduper  formatoutput.py  requirements.txt  utils.py  vennai.py
.github/: dependabot.yml
.github/workflows/: release-deb.yml  security.yml
ci/gitlab/: Dockerfile  basic_sanity_blake2.sh  basic_sanity_crc32.sh  basic_sanity_csum.sh  basic_sanity_sha256.sh  basic_sanity_xxhash.sh  btrfs-progs-tests.service  build_btrfsprogs_dduper.sh  kernel_build.sh  run_tests.sh  setup_image.sh  setup_repos.sh
ci/gitlab/tests/: basic_dir_recurse_test.sh  basic_dir_test.sh  basic_sanity_csum.sh  basic_sanity_dumpcsum.sh  dataset.py  docker_test.sh  fast_mode.sh
patch/btrfs-progs-v5.12.1/: 0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v5.16/: 0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v5.18/: 0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v5.6.1/: 0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v5.9/: 0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v6.1/: 0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v6.11/: 0001-Print-csum-for-a-given-file-on-stdout-with-subvolume.patch  0001-Print-csum-for-a-given-file-on-stdout.patch
patch/btrfs-progs-v6.3.3/: 0001-Print-csum-for-a-given-file-on-stdout.patch
src/: cli.rs  csum.rs  db.rs  dedupe.rs  fop.rs  main.rs
src/fop/: dduper.rs
tests/: TESTS.md  benchmark.sh  test.py  test_rust.sh  verify.sh
