[package]
name = "dduper"
version = "0.0.5"
authors = ["Lakshmipathi Ganapathi <lakshmipathi.g@gmail.com>"]
edition = "2021"
license = "GPL-2.0"
description = "BTRFS block-level deduplication tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
libc = "0.2"
regex = "1"
comfy-table = "7"
itertools = "0.13"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
anyhow = "1"
